--- a/index.html
+++ b/index.html
@@ -165,71 +165,115 @@
         border-radius: 0.375rem;
         font-size: 0.9rem;
       }
+      
       .phrase-body {
-        display: grid;
-        gap: 1.5rem;
-      }
-      .phrase-arabic-container {
         display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
         gap: 1.5rem;
+        align-items: flex-start;
       }
-      .phrase-arabic-container .label {
+
+      .phrase-content {
+        flex: 1;
+        min-width: 0;
+      }
+
+      .phrase-table-container {
+        overflow-x: auto;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 1.5rem;
+        font-size: 0.95rem;
+      }
+
+      th, td {
+        padding: 0.75rem;
+        text-align: left;
+        border-bottom: 1px solid var(--border-color);
+        vertical-align: middle;
+      }
+
+      thead {
+        background-color: var(--background-color);
+      }
+
+      th {
         font-weight: 600;
         font-size: 0.8rem;
         color: var(--text-muted-color);
         text-transform: uppercase;
       }
-      .arabic-and-image-wrapper {
+
+      tbody tr:last-child td {
+        border-bottom: none;
+      }
+
+      tbody tr.highlight {
+        background-color: var(--light-primary-color);
+        transition: background-color 0.1s linear;
+      }
+      
+      td.arabic-cell {
+        font-family: 'Amiri', serif;
+        font-size: 1.5rem;
         text-align: right;
+        line-height: 1.5;
       }
-      .phrase-arabic-container .arabic-text {
-        font-size: 2.5rem;
-        direction: rtl;
-        font-family: 'Amiri', serif; /* A good font for Arabic */
-      }
-      .position-images {
-        display: flex;
-        gap: 1rem;
-        justify-content: flex-end;
-        margin-top: 1rem;
-        flex-wrap: wrap;
-        align-items: flex-start;
-      }
-      .position-image-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 0.25rem;
-      }
-      .position-images img {
-        height: 80px;
-        width: auto;
-        min-width: 60px;
-        border-radius: 0.375rem;
-        object-fit: contain;
-        background-color: var(--background-color);
-        border: 1px solid var(--border-color);
-      }
-      .position-image-caption {
-        font-size: 0.75rem;
-        color: var(--text-muted-color);
-        text-align: center;
-        max-width: 80px;
-      }
-      .phrase-details-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 1.5rem;
-      }
-      .detail-item .label {
+
+      .full-translation .label {
         font-weight: 600;
         font-size: 0.8rem;
         color: var(--text-muted-color);
         text-transform: uppercase;
         margin-bottom: 0.25rem;
       }
+
+      .position-images-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+      }
+
+      .position-image-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.25rem;
+      }
+
+      .position-image-wrapper img {
+        height: 100px;
+        width: auto;
+        min-width: 80px;
+        border-radius: 0.375rem;
+        object-fit: contain;
+        background-color: var(--background-color);
+        border: 1px solid var(--border-color);
+      }
+
+      .position-image-caption {
+        font-size: 0.75rem;
+        color: var(--text-muted-color);
+        text-align: center;
+        max-width: 100px;
+      }
+
+      @media (max-width: 768px) {
+        .phrase-body {
+          flex-direction: column;
+        }
+        .position-images-container {
+          order: -1; /* Move image to the top on mobile */
+          flex-direction: row;
+          justify-content: center;
+          flex-wrap: wrap;
+          width: 100%;
+        }
+      }
+
       @media (max-width: 600px) {
         .phrase-header {
           flex-direction: column;
