removed local storage use

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       .settings-header {
         display: flex;
         justify-content: flex-end;
+        gap: 0.5rem;
         position: sticky;
         top: 90px;
         z-index: 9;
