fixed text on mobile

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         text-align: left;
         border-bottom: 1px solid var(--border-color);
         vertical-align: middle;
+         overflow-wrap: break-word;
       }
 
       thead {
